<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding_size"
    tools:context="com.androidapp.yemyokyaw.implicitintents.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/input_padding_size">

            <EditText
                android:id="@+id/et_txt_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_design_height"
                android:layout_marginTop="@dimen/input_padding_size"
                android:padding="3dp"
                android:gravity="center_vertical"
                android:hint="@string/tv_input"
                android:textSize="@dimen/input_txt_size"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_contact_add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="selectContact"
            android:background="@drawable/ic_person"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_share_compat"
                android:textSize="@dimen/btn_txt_size"
                android:drawableLeft="@drawable/ic_share"
                android:onClick="clickShareBtn"
                android:padding="@dimen/btn_padding_size"/>

            <Button
                android:id="@+id/btn_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_location"
                android:textSize="@dimen/btn_txt_size"
                android:drawableLeft="@drawable/ic_location"
                android:onClick="clickLocationBtn"
                android:padding="@dimen/btn_padding_size"/>

            <Button
                android:id="@+id/btn_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_call"
                android:textSize="@dimen/btn_txt_size"
                android:drawableLeft="@drawable/ic_call"
                android:onClick="clickPhCallBtn"
                android:padding="@dimen/btn_padding_size"/>

            <Button
                android:id="@+id/btn_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_mail"
                android:textSize="@dimen/btn_txt_size"
                android:drawableLeft="@drawable/ic_email"
                android:onClick="clickEmailBtn"
                android:padding="@dimen/btn_padding_size"/>

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_camera"
                android:textSize="@dimen/btn_txt_size"
                android:drawableLeft="@drawable/ic_camera"
                android:onClick="clickCamreaBtn"
                android:padding="@dimen/btn_padding_size"/>

            <Button
                android:id="@+id/btn_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_photo"
                android:textSize="@dimen/btn_txt_size"
                android:drawableLeft="@drawable/ic_photo"
                android:onClick="clickPhotoBtn"
                android:padding="@dimen/btn_padding_size"/>

            <Button
                android:id="@+id/btn_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_calendar"
                android:textSize="@dimen/btn_txt_size"
                android:drawableLeft="@drawable/ic_calendar"
                android:onClick="clickCalendarBtn"
                android:padding="@dimen/btn_padding_size"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
